Added the registration call
