# services/iam/doc/openapi.json
@@ -95,6 +95,35 @@
         }
       }
     },
+    "/register": {
+      "post": {
+        "tags": [
+          "authentication"
+        ],
+        "summary": "Register route",
+        "description": "",
+        "operationId": "performRegister",
+        "requestBody": {
+          "description": "Register new user",
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/Register"
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "Registered account successfully"
+          },
+          "400": {
+            "description": "Bad request, Missing mandatory body"
+          }
+        }
+      }
+    },
     "/logout": {
       "post": {
         "tags": [
@@ -1042,6 +1071,34 @@
         "required": [
           "username",
           "password"
+        ]
+      },
+      "Register": {
+        "title": "Register data",
+        "type": "object",
+        "properties": {
+          "username": {
+            "type": "string"
+          },
+          "firstname": {
+            "type": "string"
+          },
+          "lastname": {
+            "type": "string"
+          },
+          "tenant": {
+            "type": "string"
+          },
+          "password": {
+            "type": "string"
+          }
+        },
+        "required": [
+          "username",
+          "password",
+          "firstname",
+          "lastname",
+          "tenant"
         ]
       },
       "TenantMutable": {
